--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+
+spring.application.name=SERVICE-EMPRUNT
+
+spring.datasource.url=jdbc:mysql://localhost:3306/compte_db?serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=etudiantdb
+spring.datasource.password=etudiantdb
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=9592
